Error in Google Auth

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,8 @@
-PORT=8747
+PORT=3000
 MONGODB_URL='mongodb://localhost:27017/chat-app'
 ORIGIN="http://localhost:5173"
 JWT_TOKEN="jwtToken"
+
+SESSION_SECRET="SECRET_HERE"
+CLIENT_ID="1063001500130-1si494cgad0fbj4qgf9areglro160fof.apps.googleusercontent.com"
+CLIENT_SECRET="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"
